--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+.backimg{
+  background-image: linear-gradient(rgba(75, 73, 73, 0.5), rgba(59, 59, 59, 0.5)), url(/pexels-elina-fairytale-4008702.jpg);
+  display: block;
+  background-size:cover ;
+  width: 100%;
+  height: 60vh;
+  margin: -1pc;
+  margin-top: -21px;
+  padding-left:24px;
+}
+
+body{
+margin: 0;
+}
 
 *{
     box-sizing: border-box;
@@ -9,11 +23,12 @@ body{
      background-repeat: no-repeat;
     height: 20%;
     font-family: Arial, sans-serif;
-   
+    margin: 0;
+    
 }
 body::before {
     content: "";
-    background: rgba(0, 0, 0, 0.5); /* Adjust the opacity (0.5) to make it darker or lighter */
+    background: rgba(0, 0, 0, 0.5); 
     position: absolute;
     top: 0;
     left: 0;
@@ -21,7 +36,7 @@ body::before {
     height: 100%;
     z-index: -1;
   }
-  
+ 
 .d1{
   display: flex;
   color: black;
@@ -29,7 +44,7 @@ body::before {
   position: fixed;
   margin-top: -15pc;
   height: 14vh;
-  transition: transform 0.7s ease-in; /* Apply a transformation with a 0.5-second transition and "ease-in" timing function */
+  transition: transform 0.7s ease-in;  
  
 }
 .scroll {
@@ -40,7 +55,7 @@ body::before {
   margin-top: -16pc;
   background-color: #111010;
  
-  transform: scale(1.1) ; /* Apply a scale transformation */
+  transform: scale(1.1) ;  
 
 }
 nav {
@@ -89,7 +104,7 @@ nav {
     height: 11pc 
   }
 
-/* Style the dropdown container (hidden by default) */
+ 
 .dropdown-content {
   display: none;
   position: absolute;
@@ -104,7 +119,7 @@ nav {
 
 }
 
-/* Style the dropdown links */
+ 
 .dropdown-content a {
   text-decoration: none;
   display: flex;
@@ -113,14 +128,14 @@ nav {
   
 }
 
-/* Change color of links on hover */
+ 
 .dropdown-content a:hover {
   background-color: #3a3636;
   display: flex;
   flex-direction: column;
 }
 
-/* Show the dropdown content when hovering over the dropdown item */
+ 
 .dropdown:hover .dropdown-content {
   display: flex;
   flex-direction: column;
@@ -135,6 +150,7 @@ nav {
     justify-content: center;
     align-items: center;
     color: aliceblue;
+   
 }
 
 .d2 h1{
@@ -196,7 +212,7 @@ select {
     font-size: 10px;
     border-bottom: 1px solid #ccc;
     font-size: large;
-     padding: 3px;
+    padding: 3px;
     
   }
   select option{
@@ -209,57 +225,51 @@ select {
   }
 
 .job-search button:hover{
- background-color: #e2e055  ;
+  background-color: #e2e055  ;
 }
 
 .job-search{
-        text-align: center;
-        justify-content: center;
-        align-items: center;
+   text-align: center;
+   justify-content: center;
+   align-items: center;
         
 }
-.sec1{
+.row{
+    margin: 0;
     background-color: #78be5c;
-
-    width: 101.6%;
-    margin-left: -1pc;
+    width: 100%;
     padding: 3pc;
-    margin-top: 68px;
+    position: relative;
     height: 30vh;
-   
+    margin-top: 2pc;
+    display: flex;
+    justify-content: space-around;
+    z-index: 0;
+  
 }
-.sec1 button{
+.row button{
   border: none;
   background-color: transparent;
-  width: 16%;
+  width: 100%;
   padding: 10px 0; /* Add top and bottom padding */
-   color: #000;
+  color: #000;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
   margin: -24px 2px;
   cursor: pointer;
-  
+
 }
 
-.sec1 button:hover {
+.row button:hover {
   background-color: rgb(197, 182, 182);
 } 
 
-.sec1 h3 {
-  border-bottom: 2px solid #000; /* Set the bottom border width */
-margin-left: 3pc;
-margin-right: 3pc;
-padding-bottom: 1pc;
-width: max-content;
-}
+ 
 
-
-
-
-.sec1 button:hover{
-    background-color:#727262;
+.row button:hover{
+  background-color:#727262;
 }
 .lj{
   text-align: center;
@@ -269,17 +279,16 @@ width: max-content;
 }
  
 table{
-  
   margin: 0 auto; /* Set left and right margins to "auto" to center the table horizontally */
   border-spacing: 0;
-   
+  width: 80%;
 }
 
 .t1 td {
-  padding-right: 3pc;
-  padding-left: 3pc;
- padding-bottom: 2pc;
-  padding-top: 2%;
+  padding-right: 1pc;
+  padding-left: 2pc;
+  padding-bottom: 1pc;
+  padding-top: 1%;
   border-bottom: 2px solid #817373; /* Add a border to the bottom of each cell in the row */
 
 
@@ -295,18 +304,23 @@ table{
   border-right:3px solid #78be5c;
 
   
-}
-.t1 tr {
-
-}
-
+} 
 .t1 tr:hover td:first-child {
   border-left: 6px solid #78be5c; /* Add a left border to the first cell (td) in the row when it's hovered */
 }
 
 .cnter{
-text-align: center;
-margin-top: 4pc;
+  text-align: center;
+  margin-top: 4pc;
+}
+.view{
+   
+ padding: 1pc;
+ border-radius: 10px;
+ box-shadow: 0 0 10px rgba(0,0,0,.5);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  background-color: #78be5c;
+  border: none;
 }
    
 .d3{
@@ -372,8 +386,8 @@ span p{
   border-radius: 1pc;
 }
 .sec2 h1{
-font-size: xXx-large;
-color: #383232
+font-size: xxx-large;
+color: rgb(80, 80, 80)
 }
   
 
@@ -536,8 +550,7 @@ button:hover {
   }
    .a4{
     margin-left: 8pc;
-
-
+ 
    }
    .sidebar-container ul{
     position: absolute;
@@ -546,28 +559,26 @@ button:hover {
     margin-top: 1pc;
     width: max-content;
     margin-left: -1pc;
-  
-   
+
   }
   
   .sidebar-container{
-  visibility: hidden;
-  height:100vh;
-  width: 10pc;
-  position:fixed;
-  float: left;
-  width: 10pc;
-  background-color: #3a3636;
-  margin-left: -2pc;
-  font-size: larger;
-  
+    visibility: hidden;
+    height:100vh;
+    position:fixed;
+    width: 30%;
+    background-color: #3a3636;
+    font-size: larger;
+    margin-top: -1pc;
+    margin-left: 5pc;
+    padding-left: 3pc;
+    z-index: 34;
   }
   .sidebar-container a {
     width: max-content;
     list-style: none;
     color: #c5c5c5;
     text-decoration: none;
-
   }
   .sidebar-container ul li {
     margin-bottom: 2pc;
@@ -575,28 +586,27 @@ button:hover {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
   .sidebarBtn{
-    visibility: hidden;
-    margin: 2pc;
-    position: fixed;
-    cursor: pointer;
-    z-index: 23;
-  
+    visibility: hidden; 
+    margin-left: 7pc;
+    position:fixed;
+    cursor:pointer;
+    
     }
 
- 
 .sidebar-container .sidebrclosebtn{
-  text-align: center;
   color: #fff;
   cursor: pointer;
   background-color:transparent;
   font-size: x-large;
   margin-bottom: 1pc;
   float: right;
-
+  margin-right: -2pc;
+ z-index: 3;
 }
 
 
 
+  
 @media screen and (max-width: 700px) {
   .sidebarBtn {
   visibility:visible;   
@@ -622,11 +632,17 @@ button:hover {
   margin-left: -5pc;
  }
 }
+@media screen and (min-width: 700px) {
+  .sidebar-container {
+    visibility: hidden;
+  }
+}
 @media screen and (max-width: 700px) {
   .d1 {
     visibility: hidden;
   }
 }
+ 
 @media screen and (max-width: 1000px) {
   .d1 ul li {
   margin-left: -2.5pc;   
@@ -636,3 +652,70 @@ button:hover {
   margin-left: -5pc;
  }
 }
+
+@media screen and (max-width: 700){
+  
+
+.d2{
+ 
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  color: rgb(0, 128, 240);
+ 
+}
+ 
+}
+@media screen and (max-width: 700){
+   
+  .dv4{ 
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    color: rgb(0, 128, 240); 
+    display: block;
+  }
+  .inner{
+    display: flex;
+  } 
+
+.dv4{
+  background-color: #c4c4c4;
+  width: 100%;
+  padding: 1pc;
+ 
+ }
+
+.vid{
+  width: 500PX;
+  background-color:#fff1f1 ;
+  height: 95vh;
+  display: block;
+  margin:4pc;
+  margin: 4pc;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.7);
+}
+.inner{
+    display: flex;
+}
+.poster{
+  width: 700PX;
+  background-color:#fff1f1 ;
+  height: 45vh;
+  display: block;
+  margin:4pc;
+  margin: 4pc;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.7);
+  padding: 10px;
+}
+ .poster h4{
+  margin-top: -0.7pc;
+ }
+ #inner2 #video{
+      margin-top: -22pc;
+ }
+ #inner2 #poster{
+  margin-top: -3pc;
+  
+ }  
+  }
